salary_model/reports/runs/v0.2/fairness.md
# Fairness audit

## Descriptive head

- gender median |gap|: 3.58%
- gender p90 |gap|: 7.84%
- nationality median |gap|: 5.85%
- nationality p90 |gap|: 13.88%

| family    | level   |   median_gender |   median_nat |   n |
|:----------|:--------|----------------:|-------------:|----:|
| HEALTH    | IC4     |      0.0938907  |   0.0532829  |  74 |
| EDU       | IC3     |      0.0808513  |   0.0288183  |  40 |
| LEGAL     | M1      |      0.0782432  |   0.0958898  |   8 |
| LEGAL     | IC4     |      0.075453   |   0.0629529  |  16 |
| DESIGN    | IC3     |      0.0736592  |   0.116629   |  15 |
| LEGAL     | IC1     |      0.0724134  |   0.262483   |   2 |
| HEALTH    | IC5     |      0.0667745  |   0.0349687  |  33 |
| DESIGN    | M4      |      0.0661732  |   0.12977    |   2 |
| CUSTOMER  | IC3     |      0.0650129  |   0.0513049  |  34 |
| LEGAL     | IC5     |      0.063874   |   0.0270845  |   7 |
| LEGAL     | IC6     |      0.0624222  |   0.0477094  |   3 |
| EDU       | IC5     |      0.06152    |   0.0317765  |  24 |
| HEALTH    | M1      |      0.0610525  |   0.0623969  |  21 |
| SUPPLY    | IC1     |      0.0608297  |   0.382992   |   7 |
| DESIGN    | M1      |      0.0598498  |   0.0934311  |   4 |
| ENG_MECH  | M1      |      0.0595251  |   0.0967877  |  11 |
| SWE       | IC3     |      0.0592637  |   0.0838744  |  53 |
| SALES     | IC3     |      0.0589115  |   0.0784809  |  46 |
| HEALTH    | IC3     |      0.0580958  |   0.104239   |  64 |
| SWE       | M1      |      0.0578825  |   0.0487076  |  20 |
| SALES     | IC1     |      0.0576561  |   0.310162   |  12 |
| SUPPLY    | IC3     |      0.0575988  |   0.0492278  |  25 |
| SWE       | IC5     |      0.0568201  |   0.0321982  |  35 |
| SALES     | IC5     |      0.056541   |   0.0415342  |  34 |
| DATA      | IC3     |      0.0562341  |   0.0980193  |  34 |
| ENG_MECH  | IC1     |      0.0538648  |   0.264357   |   4 |
| OPS       | IC1     |      0.0531598  |   0.304971   |  11 |
| SWE       | IC1     |      0.0527644  |   0.2428     |  13 |
| ENG_MECH  | IC5     |      0.0514406  |   0.0354924  |  17 |
| CUSTOMER  | IC4     |      0.0497367  |   0.0404842  |  48 |
| FIN       | IC3     |      0.0488986  |   0.100818   |  37 |
| OPS       | IC3     |      0.0486712  |   0.0672092  |  44 |
| DESIGN    | IC2     |      0.0486596  |   0.067467   |  10 |
| OPS       | IC5     |      0.0478745  |   0.0247081  |  17 |
| PM        | IC1     |      0.0472722  |   0.220273   |   5 |
| LEGAL     | IC3     |      0.0472289  |   0.108479   |   8 |
| DATA      | M1      |      0.0469579  |   0.0337357  |  16 |
| LEGAL     | M4      |      0.0469337  |   0.0768458  |   1 |
| SWE       | IC2     |      0.0465383  |   0.0581334  |  26 |
| LEGAL     | M2      |      0.0462267  |   0.0279039  |   1 |
| PM        | IC5     |      0.0454334  |   0.0465219  |  18 |
| LEGAL     | IC2     |      0.0452957  |   0.0374286  |   6 |
| PM        | IC3     |      0.0452471  |   0.0892543  |  26 |
| DESIGN    | IC4     |      0.0445271  |   0.0693914  |  15 |
| SUPPLY    | M1      |      0.0444924  |   0.0653652  |   8 |
| SWE       | IC4     |      0.0443596  |   0.0327944  |  70 |
| PM        | IC4     |      0.0442996  |   0.0406305  |  28 |
| PM        | M5      |      0.0442494  |   0.0656028  |   1 |
| CUSTOMER  | M1      |      0.0439666  |   0.0402662  |  14 |
| EDU       | M1      |      0.0430797  |   0.0490733  |  21 |
| FIN       | M1      |      0.0429266  |   0.0630198  |  19 |
| ENG_CIVIL | IC3     |      0.0425817  |   0.0667946  |  31 |
| ENG_MECH  | IC3     |      0.0421147  |   0.103181   |  34 |
| ENG_ELEC  | IC1     |      0.0420193  |   0.184251   |   6 |
| PM        | M1      |      0.0414542  |   0.0511543  |  12 |
| SALES     | IC4     |      0.0412672  |   0.0510053  |  77 |
| DATA      | IC4     |      0.0410437  |   0.0329966  |  29 |
| SWE       | M2      |      0.0409355  |   0.0404671  |  18 |
| LEGAL     | D1      |      0.0405087  |   0.0576538  |   2 |
| DATA      | M3      |      0.0404755  |   0.0830694  |   9 |
| DATA      | IC6     |      0.0401711  |   0.0675025  |  10 |
| ENG_ELEC  | IC5     |      0.0399104  |   0.0334621  |  14 |
| DATA      | M2      |      0.039618   |   0.0497751  |  11 |
| PM        | M3      |      0.0389637  |   0.138399   |   6 |
| HEALTH    | M2      |      0.0388297  |   0.0570154  |  23 |
| HR        | IC5     |      0.0383446  |   0.0465837  |  17 |
| ENG_ELEC  | IC3     |      0.037873   |   0.07879    |  25 |
| MARKETING | IC3     |      0.0378395  |   0.0606409  |  27 |
| FIN       | IC5     |      0.0378251  |   0.0435621  |  23 |
| SWE       | M5      |      0.0364941  |   0.0716505  |   4 |
| DATA      | IC5     |      0.0362466  |   0.0433506  |   9 |
| SWE       | M4      |      0.035493   |   0.0819176  |   9 |
| SUPPLY    | IC2     |      0.034813   |   0.0836751  |  11 |
| MARKETING | IC5     |      0.0347005  |   0.0346148  |  23 |
| SALES     | M1      |      0.0345329  |   0.05008    |  25 |
| HEALTH    | IC1     |      0.0339263  |   0.231494   |  14 |
| EDU       | M3      |      0.0338137  |   0.0386302  |  17 |
| FIN       | IC4     |      0.033667   |   0.05587    |  56 |
| OPS       | M1      |      0.0336052  |   0.0517622  |  23 |
| ENG_ELEC  | M1      |      0.032908   |   0.0545495  |  11 |
| HEALTH    | IC6     |      0.0327191  |   0.0633214  |  14 |
| EDU       | IC2     |      0.0326144  |   0.032475   |  27 |
| CUSTOMER  | IC2     |      0.03226    |   0.162856   |  29 |
| SUPPLY    | IC4     |      0.0321204  |   0.0621004  |  23 |
| DESIGN    | IC5     |      0.031983   |   0.0462686  |  12 |
| HR        | IC1     |      0.0317001  |   0.263264   |   5 |
| EDU       | M2      |      0.0311552  |   0.0146323  |  22 |
| EDU       | IC4     |      0.0307438  |   0.0269123  |  58 |
| ENG_CIVIL | M2      |      0.0303782  |   0.0361701  |   8 |
| CUSTOMER  | IC5     |      0.030271   |   0.0306446  |  20 |
| HR        | IC4     |      0.0301197  |   0.0795192  |  31 |
| OPS       | IC2     |      0.0301035  |   0.0315249  |  23 |
| MARKETING | M1      |      0.0300547  |   0.0534884  |   7 |
| ENG_CIVIL | IC5     |      0.0295806  |   0.0494624  |  10 |
| PM        | M2      |      0.0293143  |   0.0553702  |  12 |
| ENG_MECH  | M2      |      0.0289926  |   0.0442129  |  11 |
| SWE       | M3      |      0.0288598  |   0.0932964  |  19 |
| HEALTH    | D1      |      0.0287887  |   0.0103322  |   6 |
| DESIGN    | IC1     |      0.0287755  |   0.224766   |   6 |
| SWE       | IC6     |      0.028591   |   0.0503799  |  14 |
| EDU       | M4      |      0.028468   |   0.0543236  |   3 |
| EDU       | D1      |      0.0283396  |   0.0215912  |   5 |
| ENG_MECH  | D1      |      0.0281806  |   0.0717327  |   3 |
| EDU       | IC1     |      0.0280296  |   0.294618   |   5 |
| DATA      | D1      |      0.0278939  |   0.0582433  |   1 |
| FIN       | IC1     |      0.0278798  |   0.451876   |   3 |
| LEGAL     | D2      |      0.0276686  |   0.066222   |   1 |
| ENG_MECH  | D3      |      0.027503   |   0.0654339  |   1 |
| OPS       | IC4     |      0.027486   |   0.0610308  |  37 |
| SALES     | SVP     |      0.0272078  |   0.0351656  |   1 |
| ENG_MECH  | IC4     |      0.0269493  |   0.0448206  |  41 |
| FIN       | IC2     |      0.0268847  |   0.0734249  |  20 |
| MARKETING | IC4     |      0.0267757  |   0.0489033  |  25 |
| PM        | IC6     |      0.02672    |   0.0405335  |   7 |
| HEALTH    | M4      |      0.0266941  |   0.0464717  |  10 |
| HR        | IC3     |      0.0265765  |   0.0743743  |  23 |
| HR        | M1      |      0.0258085  |   0.0704484  |  13 |
| PM        | M4      |      0.0256933  |   0.079943   |   9 |
| ENG_CIVIL | M1      |      0.0251572  |   0.0659537  |   8 |
| MARKETING | D1      |      0.0251554  |   0.081545   |   5 |
| OPS       | M2      |      0.0250963  |   0.0652812  |  12 |
| ENG_ELEC  | IC4     |      0.0250549  |   0.0553467  |  32 |
| MARKETING | M2      |      0.024527   |   0.03996    |   6 |
| CUSTOMER  | M2      |      0.0245183  |   0.055182   |  12 |
| SWE       | D2      |      0.0240285  |   0.0464604  |   2 |
| HEALTH    | IC2     |      0.0238798  |   0.0515383  |  30 |
| SUPPLY    | IC5     |      0.0237369  |   0.0493883  |  15 |
| DATA      | IC2     |      0.0236837  |   0.0557648  |  13 |
| SWE       | D1      |      0.0235704  |   0.0585801  |  11 |
| MARKETING | IC1     |      0.0233915  |   0.578908   |   4 |
| DESIGN    | D1      |      0.0233738  |   0.0207859  |   1 |
| FIN       | M4      |      0.0231607  |   0.0901799  |   6 |
| DATA      | M5      |      0.0230894  |   0.0777985  |   1 |
| SALES     | M3      |      0.0230519  |   0.106936   |  22 |
| MARKETING | IC2     |      0.0226114  |   0.0498933  |  12 |
| HR        | M2      |      0.0224248  |   0.0504124  |   9 |
| PM        | SVP     |      0.0223764  |   0.0460383  |   1 |
| PM        | D2      |      0.0223368  |   0.0415901  |   2 |
| ENG_ELEC  | IC2     |      0.0223054  |   0.0583955  |  11 |
| OPS       | D2      |      0.0222402  |   0.00829983 |   2 |
| ENG_MECH  | IC6     |      0.0221564  |   0.0736119  |   9 |
| DATA      | D2      |      0.0219877  |   0.0493303  |   2 |
| SALES     | IC6     |      0.021983   |   0.0612095  |  10 |
| HR        | IC2     |      0.0219409  |   0.117536   |  12 |
| EDU       | VP      |      0.0217408  |   0.0418687  |   4 |
| ENG_ELEC  | M2      |      0.0217073  |   0.059458   |  12 |
| MARKETING | IC6     |      0.0214443  |   0.0418765  |   4 |
| SALES     | M5      |      0.0213392  |   0.0726462  |   3 |
| DESIGN    | VP      |      0.0212157  |   0.0591096  |   1 |
| SUPPLY    | M2      |      0.0210958  |   0.0439124  |   5 |
| ENG_CIVIL | D2      |      0.0210705  |   0.052772   |   1 |
| HEALTH    | VP      |      0.020625   |   0.0302253  |   4 |
| DATA      | IC1     |      0.0204909  |   0.2256     |  10 |
| HEALTH    | D2      |      0.0203066  |   0.0502498  |   5 |
| CUSTOMER  | IC6     |      0.0199287  |   0.0480006  |  10 |
| ENG_ELEC  | M4      |      0.0199281  |   0.0883179  |   2 |
| SALES     | M2      |      0.0197535  |   0.0591432  |  22 |
| EDU       | SVP     |      0.0195343  |   0.0329898  |   1 |
| DESIGN    | M5      |      0.0192212  |   0.0936632  |   1 |
| FIN       | M2      |      0.0190091  |   0.0542197  |  15 |
| OPS       | M3      |      0.018819   |   0.0865365  |  12 |
| ENG_MECH  | M4      |      0.0184098  |   0.101      |   1 |
| EDU       | IC6     |      0.0183319  |   0.0259997  |  13 |
| SWE       | VP      |      0.0179948  |   0.0320017  |   1 |
| ENG_CIVIL | IC4     |      0.0178894  |   0.0571903  |  29 |
| SUPPLY    | IC6     |      0.0176719  |   0.0443484  |   6 |
| HEALTH    | M3      |      0.017664   |   0.0619001  |   9 |
| SALES     | M4      |      0.0176331  |   0.0996927  |   9 |
| DESIGN    | M3      |      0.0175903  |   0.12988    |   4 |
| SUPPLY    | D1      |      0.0175152  |   0.0552693  |   4 |
| FIN       | M3      |      0.0173974  |   0.099498   |  11 |
| ENG_MECH  | M3      |      0.017372   |   0.10425    |  11 |
| OPS       | IC6     |      0.0171731  |   0.0632129  |   9 |
| MARKETING | M3      |      0.0170918  |   0.108029   |  13 |
| SALES     | D1      |      0.016734   |   0.0620366  |   3 |
| HEALTH    | CXO     |      0.0166711  |   0.0306912  |   1 |
| SUPPLY    | M4      |      0.016633   |   0.0733892  |   4 |
| DATA      | M4      |      0.0166245  |   0.0855787  |   4 |
| SUPPLY    | D2      |      0.0166103  |   0.0312517  |   2 |
| DESIGN    | M2      |      0.0165326  |   0.0878402  |   9 |
| ENG_CIVIL | IC1     |      0.0163572  |   0.199892   |   1 |
| ENG_ELEC  | M5      |      0.0162345  |   0.0622239  |   5 |
| ENG_CIVIL | IC2     |      0.0162291  |   0.0875901  |  10 |
| SALES     | IC2     |      0.0161861  |   0.0498032  |  16 |
| ENG_MECH  | IC2     |      0.0161006  |   0.057465   |  14 |
| ENG_CIVIL | D3      |      0.0159107  |   0.0376537  |   1 |
| CUSTOMER  | IC1     |      0.0156393  |   0.386015   |  15 |
| ENG_ELEC  | D2      |      0.015352   |   0.0506595  |   1 |
| FIN       | VP      |      0.0152962  |   0.0321948  |   3 |
| DATA      | D3      |      0.0149495  |   0.0471146  |   2 |
| CUSTOMER  | M4      |      0.0147269  |   0.0455089  |   8 |
| HR        | M3      |      0.014597   |   0.102746   |   5 |
| SUPPLY    | VP      |      0.0145671  |   0.0692699  |   1 |
| SUPPLY    | M3      |      0.0142312  |   0.096962   |   4 |
| FIN       | D1      |      0.0139215  |   0.0654872  |   8 |
| LEGAL     | M3      |      0.013903   |   0.175229   |   2 |
| ENG_CIVIL | IC6     |      0.0138558  |   0.0526986  |  10 |
| PM        | IC2     |      0.0138489  |   0.0415139  |   9 |
| CUSTOMER  | M3      |      0.0137345  |   0.0637964  |  10 |
| LEGAL     | VP      |      0.0137306  |   0.0506485  |   1 |
| ENG_ELEC  | D3      |      0.0135522  |   0.0764475  |   1 |
| MARKETING | M4      |      0.0134745  |   0.11396    |   5 |
| HR        | M4      |      0.0134673  |   0.0618064  |   3 |
| HEALTH    | SVP     |      0.0130849  |   0.0202443  |   3 |
| HEALTH    | M5      |      0.0127546  |   0.0589117  |   1 |
| MARKETING | D2      |      0.0124437  |   0.0327863  |   4 |
| OPS       | M4      |      0.0118758  |   0.054006   |   3 |
| FIN       | D2      |      0.011565   |   0.0605018  |   3 |
| SALES     | VP      |      0.011302   |   0.0234766  |   2 |
| FIN       | IC6     |      0.0112151  |   0.0736132  |   6 |
| ENG_ELEC  | D1      |      0.0110941  |   0.0358479  |   2 |
| MARKETING | VP      |      0.0110421  |   0.0604005  |   2 |
| ENG_ELEC  | IC6     |      0.0108242  |   0.0544047  |   8 |
| ENG_ELEC  | VP      |      0.0105732  |   0.063432   |   1 |
| OPS       | D1      |      0.0102939  |   0.0483908  |   3 |
| MARKETING | D3      |      0.0101004  |   0.065794   |   5 |
| ENG_MECH  | D2      |      0.00997498 |   0.0108779  |   2 |
| ENG_CIVIL | VP      |      0.00972352 |   0.0495525  |   2 |
| ENG_MECH  | VP      |      0.00860538 |   0.0377717  |   2 |
| ENG_CIVIL | D1      |      0.00819454 |   0.0444765  |   7 |
| ENG_MECH  | CXO     |      0.00806593 |   0.0566636  |   1 |
| ENG_ELEC  | M3      |      0.00801733 |   0.0686159  |   6 |
| HR        | VP      |      0.00763691 |   0.062349   |   2 |
| FIN       | D3      |      0.00721002 |   0.05024    |   1 |
| EDU       | D2      |      0.00711045 |   0.0240083  |   3 |
| ENG_CIVIL | M3      |      0.00699319 |   0.0764721  |   9 |
| OPS       | SVP     |      0.00691143 |   0.0580415  |   2 |
| OPS       | VP      |      0.00678292 |   0.0328939  |   2 |
| ENG_CIVIL | M5      |      0.00626096 |   0.0688455  |   1 |
| PM        | VP      |      0.00617768 |   0.0578785  |   2 |
| DATA      | VP      |      0.00615935 |   0.0554021  |   1 |
| HR        | IC6     |      0.00525859 |   0.0424252  |   4 |
| HR        | D3      |      0.00517578 |   0.0850706  |   1 |
| OPS       | M5      |      0.00490769 |   0.0469348  |   1 |
| ENG_CIVIL | CXO     |      0.00470957 |   0.0478146  |   2 |
| FIN       | CXO     |      0.00441529 |   0.0358604  |   1 |
| SALES     | D2      |      0.00396933 |   0.0102121  |   1 |
| CUSTOMER  | D2      |      0.00391718 |   0.0500791  |   3 |
| CUSTOMER  | D1      |      0.00382422 |   0.0378396  |   4 |
| DESIGN    | D2      |      0.00361034 |   0.0520004  |   2 |
| ENG_CIVIL | M4      |      0.00283949 |   0.0741478  |   5 |
| SWE       | D3      |      0.00244793 |   0.069565   |   1 |

## Recommendation head (blinded + reweighted)

- gender median |gap|: 0.00%
- gender p90 |gap|: 0.00%
- nationality median |gap|: 0.00%
- nationality p90 |gap|: 0.00%

| family    | level   |   median_gender |   median_nat |   n |
|:----------|:--------|----------------:|-------------:|----:|
| CUSTOMER  | D1      |               0 |            0 |   4 |
| CUSTOMER  | D2      |               0 |            0 |   3 |
| CUSTOMER  | IC1     |               0 |            0 |  15 |
| CUSTOMER  | IC2     |               0 |            0 |  29 |
| CUSTOMER  | IC3     |               0 |            0 |  34 |
| CUSTOMER  | IC4     |               0 |            0 |  48 |
| CUSTOMER  | IC5     |               0 |            0 |  20 |
| CUSTOMER  | IC6     |               0 |            0 |  10 |
| CUSTOMER  | M1      |               0 |            0 |  14 |
| CUSTOMER  | M2      |               0 |            0 |  12 |
| CUSTOMER  | M3      |               0 |            0 |  10 |
| CUSTOMER  | M4      |               0 |            0 |   8 |
| DATA      | D1      |               0 |            0 |   1 |
| DATA      | D2      |               0 |            0 |   2 |
| DATA      | D3      |               0 |            0 |   2 |
| DATA      | IC1     |               0 |            0 |  10 |
| DATA      | IC2     |               0 |            0 |  13 |
| DATA      | IC3     |               0 |            0 |  34 |
| DATA      | IC4     |               0 |            0 |  29 |
| DATA      | IC5     |               0 |            0 |   9 |
| DATA      | IC6     |               0 |            0 |  10 |
| DATA      | M1      |               0 |            0 |  16 |
| DATA      | M2      |               0 |            0 |  11 |
| DATA      | M3      |               0 |            0 |   9 |
| DATA      | M4      |               0 |            0 |   4 |
| DATA      | M5      |               0 |            0 |   1 |
| DATA      | VP      |               0 |            0 |   1 |
| DESIGN    | D1      |               0 |            0 |   1 |
| DESIGN    | D2      |               0 |            0 |   2 |
| DESIGN    | IC1     |               0 |            0 |   6 |
| DESIGN    | IC2     |               0 |            0 |  10 |
| DESIGN    | IC3     |               0 |            0 |  15 |
| DESIGN    | IC4     |               0 |            0 |  15 |
| DESIGN    | IC5     |               0 |            0 |  12 |
| DESIGN    | M1      |               0 |            0 |   4 |
| DESIGN    | M2      |               0 |            0 |   9 |
| DESIGN    | M3      |               0 |            0 |   4 |
| DESIGN    | M4      |               0 |            0 |   2 |
| DESIGN    | M5      |               0 |            0 |   1 |
| DESIGN    | VP      |               0 |            0 |   1 |
| EDU       | D1      |               0 |            0 |   5 |
| EDU       | D2      |               0 |            0 |   3 |
| EDU       | IC1     |               0 |            0 |   5 |
| EDU       | IC2     |               0 |            0 |  27 |
| EDU       | IC3     |               0 |            0 |  40 |
| EDU       | IC4     |               0 |            0 |  58 |
| EDU       | IC5     |               0 |            0 |  24 |
| EDU       | IC6     |               0 |            0 |  13 |
| EDU       | M1      |               0 |            0 |  21 |
| EDU       | M2      |               0 |            0 |  22 |
| EDU       | M3      |               0 |            0 |  17 |
| EDU       | M4      |               0 |            0 |   3 |
| EDU       | SVP     |               0 |            0 |   1 |
| EDU       | VP      |               0 |            0 |   4 |
| ENG_CIVIL | CXO     |               0 |            0 |   2 |
| ENG_CIVIL | D1      |               0 |            0 |   7 |
| ENG_CIVIL | D2      |               0 |            0 |   1 |
| ENG_CIVIL | D3      |               0 |            0 |   1 |
| ENG_CIVIL | IC1     |               0 |            0 |   1 |
| ENG_CIVIL | IC2     |               0 |            0 |  10 |
| ENG_CIVIL | IC3     |               0 |            0 |  31 |
| ENG_CIVIL | IC4     |               0 |            0 |  29 |
| ENG_CIVIL | IC5     |               0 |            0 |  10 |
| ENG_CIVIL | IC6     |               0 |            0 |  10 |
| ENG_CIVIL | M1      |               0 |            0 |   8 |
| ENG_CIVIL | M2      |               0 |            0 |   8 |
| ENG_CIVIL | M3      |               0 |            0 |   9 |
| ENG_CIVIL | M4      |               0 |            0 |   5 |
| ENG_CIVIL | M5      |               0 |            0 |   1 |
| ENG_CIVIL | VP      |               0 |            0 |   2 |
| ENG_ELEC  | D1      |               0 |            0 |   2 |
| ENG_ELEC  | D2      |               0 |            0 |   1 |
| ENG_ELEC  | D3      |               0 |            0 |   1 |
| ENG_ELEC  | IC1     |               0 |            0 |   6 |
| ENG_ELEC  | IC2     |               0 |            0 |  11 |
| ENG_ELEC  | IC3     |               0 |            0 |  25 |
| ENG_ELEC  | IC4     |               0 |            0 |  32 |
| ENG_ELEC  | IC5     |               0 |            0 |  14 |
| ENG_ELEC  | IC6     |               0 |            0 |   8 |
| ENG_ELEC  | M1      |               0 |            0 |  11 |
| ENG_ELEC  | M2      |               0 |            0 |  12 |
| ENG_ELEC  | M3      |               0 |            0 |   6 |
| ENG_ELEC  | M4      |               0 |            0 |   2 |
| ENG_ELEC  | M5      |               0 |            0 |   5 |
| ENG_ELEC  | VP      |               0 |            0 |   1 |
| ENG_MECH  | CXO     |               0 |            0 |   1 |
| ENG_MECH  | D1      |               0 |            0 |   3 |
| ENG_MECH  | D2      |               0 |            0 |   2 |
| ENG_MECH  | D3      |               0 |            0 |   1 |
| ENG_MECH  | IC1     |               0 |            0 |   4 |
| ENG_MECH  | IC2     |               0 |            0 |  14 |
| ENG_MECH  | IC3     |               0 |            0 |  34 |
| ENG_MECH  | IC4     |               0 |            0 |  41 |
| ENG_MECH  | IC5     |               0 |            0 |  17 |
| ENG_MECH  | IC6     |               0 |            0 |   9 |
| ENG_MECH  | M1      |               0 |            0 |  11 |
| ENG_MECH  | M2      |               0 |            0 |  11 |
| ENG_MECH  | M3      |               0 |            0 |  11 |
| ENG_MECH  | M4      |               0 |            0 |   1 |
| ENG_MECH  | VP      |               0 |            0 |   2 |
| FIN       | CXO     |               0 |            0 |   1 |
| FIN       | D1      |               0 |            0 |   8 |
| FIN       | D2      |               0 |            0 |   3 |
| FIN       | D3      |               0 |            0 |   1 |
| FIN       | IC1     |               0 |            0 |   3 |
| FIN       | IC2     |               0 |            0 |  20 |
| FIN       | IC3     |               0 |            0 |  37 |
| FIN       | IC4     |               0 |            0 |  56 |
| FIN       | IC5     |               0 |            0 |  23 |
| FIN       | IC6     |               0 |            0 |   6 |
| FIN       | M1      |               0 |            0 |  19 |
| FIN       | M2      |               0 |            0 |  15 |
| FIN       | M3      |               0 |            0 |  11 |
| FIN       | M4      |               0 |            0 |   6 |
| FIN       | VP      |               0 |            0 |   3 |
| HEALTH    | CXO     |               0 |            0 |   1 |
| HEALTH    | D1      |               0 |            0 |   6 |
| HEALTH    | D2      |               0 |            0 |   5 |
| HEALTH    | IC1     |               0 |            0 |  14 |
| HEALTH    | IC2     |               0 |            0 |  30 |
| HEALTH    | IC3     |               0 |            0 |  64 |
| HEALTH    | IC4     |               0 |            0 |  74 |
| HEALTH    | IC5     |               0 |            0 |  33 |
| HEALTH    | IC6     |               0 |            0 |  14 |
| HEALTH    | M1      |               0 |            0 |  21 |
| HEALTH    | M2      |               0 |            0 |  23 |
| HEALTH    | M3      |               0 |            0 |   9 |
| HEALTH    | M4      |               0 |            0 |  10 |
| HEALTH    | M5      |               0 |            0 |   1 |
| HEALTH    | SVP     |               0 |            0 |   3 |
| HEALTH    | VP      |               0 |            0 |   4 |
| HR        | D3      |               0 |            0 |   1 |
| HR        | IC1     |               0 |            0 |   5 |
| HR        | IC2     |               0 |            0 |  12 |
| HR        | IC3     |               0 |            0 |  23 |
| HR        | IC4     |               0 |            0 |  31 |
| HR        | IC5     |               0 |            0 |  17 |
| HR        | IC6     |               0 |            0 |   4 |
| HR        | M1      |               0 |            0 |  13 |
| HR        | M2      |               0 |            0 |   9 |
| HR        | M3      |               0 |            0 |   5 |
| HR        | M4      |               0 |            0 |   3 |
| HR        | VP      |               0 |            0 |   2 |
| LEGAL     | D1      |               0 |            0 |   2 |
| LEGAL     | D2      |               0 |            0 |   1 |
| LEGAL     | IC1     |               0 |            0 |   2 |
| LEGAL     | IC2     |               0 |            0 |   6 |
| LEGAL     | IC3     |               0 |            0 |   8 |
| LEGAL     | IC4     |               0 |            0 |  16 |
| LEGAL     | IC5     |               0 |            0 |   7 |
| LEGAL     | IC6     |               0 |            0 |   3 |
| LEGAL     | M1      |               0 |            0 |   8 |
| LEGAL     | M2      |               0 |            0 |   1 |
| LEGAL     | M3      |               0 |            0 |   2 |
| LEGAL     | M4      |               0 |            0 |   1 |
| LEGAL     | VP      |               0 |            0 |   1 |
| MARKETING | D1      |               0 |            0 |   5 |
| MARKETING | D2      |               0 |            0 |   4 |
| MARKETING | D3      |               0 |            0 |   5 |
| MARKETING | IC1     |               0 |            0 |   4 |
| MARKETING | IC2     |               0 |            0 |  12 |
| MARKETING | IC3     |               0 |            0 |  27 |
| MARKETING | IC4     |               0 |            0 |  25 |
| MARKETING | IC5     |               0 |            0 |  23 |
| MARKETING | IC6     |               0 |            0 |   4 |
| MARKETING | M1      |               0 |            0 |   7 |
| MARKETING | M2      |               0 |            0 |   6 |
| MARKETING | M3      |               0 |            0 |  13 |
| MARKETING | M4      |               0 |            0 |   5 |
| MARKETING | VP      |               0 |            0 |   2 |
| OPS       | D1      |               0 |            0 |   3 |
| OPS       | D2      |               0 |            0 |   2 |
| OPS       | IC1     |               0 |            0 |  11 |
| OPS       | IC2     |               0 |            0 |  23 |
| OPS       | IC3     |               0 |            0 |  44 |
| OPS       | IC4     |               0 |            0 |  37 |
| OPS       | IC5     |               0 |            0 |  17 |
| OPS       | IC6     |               0 |            0 |   9 |
| OPS       | M1      |               0 |            0 |  23 |
| OPS       | M2      |               0 |            0 |  12 |
| OPS       | M3      |               0 |            0 |  12 |
| OPS       | M4      |               0 |            0 |   3 |
| OPS       | M5      |               0 |            0 |   1 |
| OPS       | SVP     |               0 |            0 |   2 |
| OPS       | VP      |               0 |            0 |   2 |
| PM        | D2      |               0 |            0 |   2 |
| PM        | IC1     |               0 |            0 |   5 |
| PM        | IC2     |               0 |            0 |   9 |
| PM        | IC3     |               0 |            0 |  26 |
| PM        | IC4     |               0 |            0 |  28 |
| PM        | IC5     |               0 |            0 |  18 |
| PM        | IC6     |               0 |            0 |   7 |
| PM        | M1      |               0 |            0 |  12 |
| PM        | M2      |               0 |            0 |  12 |
| PM        | M3      |               0 |            0 |   6 |
| PM        | M4      |               0 |            0 |   9 |
| PM        | M5      |               0 |            0 |   1 |
| PM        | SVP     |               0 |            0 |   1 |
| PM        | VP      |               0 |            0 |   2 |
| SALES     | D1      |               0 |            0 |   3 |
| SALES     | D2      |               0 |            0 |   1 |
| SALES     | IC1     |               0 |            0 |  12 |
| SALES     | IC2     |               0 |            0 |  16 |
| SALES     | IC3     |               0 |            0 |  46 |
| SALES     | IC4     |               0 |            0 |  77 |
| SALES     | IC5     |               0 |            0 |  34 |
| SALES     | IC6     |               0 |            0 |  10 |
| SALES     | M1      |               0 |            0 |  25 |
| SALES     | M2      |               0 |            0 |  22 |
| SALES     | M3      |               0 |            0 |  22 |
| SALES     | M4      |               0 |            0 |   9 |
| SALES     | M5      |               0 |            0 |   3 |
| SALES     | SVP     |               0 |            0 |   1 |
| SALES     | VP      |               0 |            0 |   2 |
| SUPPLY    | D1      |               0 |            0 |   4 |
| SUPPLY    | D2      |               0 |            0 |   2 |
| SUPPLY    | IC1     |               0 |            0 |   7 |
| SUPPLY    | IC2     |               0 |            0 |  11 |
| SUPPLY    | IC3     |               0 |            0 |  25 |
| SUPPLY    | IC4     |               0 |            0 |  23 |
| SUPPLY    | IC5     |               0 |            0 |  15 |
| SUPPLY    | IC6     |               0 |            0 |   6 |
| SUPPLY    | M1      |               0 |            0 |   8 |
| SUPPLY    | M2      |               0 |            0 |   5 |
| SUPPLY    | M3      |               0 |            0 |   4 |
| SUPPLY    | M4      |               0 |            0 |   4 |
| SUPPLY    | VP      |               0 |            0 |   1 |
| SWE       | D1      |               0 |            0 |  11 |
| SWE       | D2      |               0 |            0 |   2 |
| SWE       | D3      |               0 |            0 |   1 |
| SWE       | IC1     |               0 |            0 |  13 |
| SWE       | IC2     |               0 |            0 |  26 |
| SWE       | IC3     |               0 |            0 |  53 |
| SWE       | IC4     |               0 |            0 |  70 |
| SWE       | IC5     |               0 |            0 |  35 |
| SWE       | IC6     |               0 |            0 |  14 |
| SWE       | M1      |               0 |            0 |  20 |
| SWE       | M2      |               0 |            0 |  18 |
| SWE       | M3      |               0 |            0 |  19 |
| SWE       | M4      |               0 |            0 |   9 |
| SWE       | M5      |               0 |            0 |   4 |
| SWE       | VP      |               0 |            0 |   1 |
