salary_model/reports/runs/v0.5/fairness.md
# Fairness audit

## Descriptive head

- gender median |gap|: 4.40%
- gender p90 |gap|: 9.41%
- nationality median |gap|: 4.32%
- nationality p90 |gap|: 11.11%

| family    | level   |   median_gender |   median_nat |   n |
|:----------|:--------|----------------:|-------------:|----:|
| HEALTH    | IC4     |     0.12792     |   0.035122   |  92 |
| SALES     | IC1     |     0.0976569   |   0.380718   |  15 |
| DESIGN    | IC1     |     0.0966878   |   0.254073   |   7 |
| LEGAL     | IC4     |     0.0949042   |   0.0556451  |  19 |
| HEALTH    | M1      |     0.0936042   |   0.0381024  |  24 |
| DESIGN    | IC3     |     0.08772     |   0.058434   |  23 |
| SALES     | IC3     |     0.0872483   |   0.0778723  |  55 |
| DESIGN    | IC2     |     0.0854919   |   0.0447419  |  14 |
| HEALTH    | IC2     |     0.0852041   |   0.0584934  |  32 |
| FIN       | IC1     |     0.0849056   |   0.203935   |   5 |
| HEALTH    | IC1     |     0.0832243   |   0.232384   |  16 |
| DESIGN    | M1      |     0.0829032   |   0.0760319  |   4 |
| DESIGN    | IC4     |     0.0812011   |   0.0548699  |  20 |
| FIN       | IC3     |     0.0771514   |   0.0710263  |  47 |
| SWE       | IC3     |     0.0744469   |   0.0489652  |  70 |
| HEALTH    | IC3     |     0.0741918   |   0.0301006  |  81 |
| PM        | IC3     |     0.072649    |   0.0670586  |  33 |
| HEALTH    | IC5     |     0.0724695   |   0.0245931  |  38 |
| EDU       | IC3     |     0.070427    |   0.022847   |  51 |
| SALES     | IC2     |     0.070405    |   0.0996532  |  23 |
| OPS       | IC3     |     0.070004    |   0.0267834  |  59 |
| SWE       | IC1     |     0.0689832   |   0.219149   |  14 |
| LEGAL     | IC3     |     0.0655424   |   0.0933222  |  12 |
| SWE       | M1      |     0.0655092   |   0.0401056  |  29 |
| EDU       | IC2     |     0.0621505   |   0.0229449  |  31 |
| ENG_CIVIL | IC3     |     0.0616734   |   0.0862917  |  41 |
| OPS       | IC1     |     0.0616074   |   0.36632    |  17 |
| SALES     | IC4     |     0.059407    |   0.0652776  |  95 |
| DESIGN    | IC5     |     0.0591781   |   0.0317748  |  15 |
| OPS       | IC4     |     0.0588666   |   0.025014   |  46 |
| SALES     | IC5     |     0.0585797   |   0.0586471  |  52 |
| SWE       | IC5     |     0.0572474   |   0.0231145  |  44 |
| ENG_ELEC  | IC1     |     0.0568849   |   0.201964   |   8 |
| DATA      | IC3     |     0.0567832   |   0.0841001  |  41 |
| EDU       | M1      |     0.0554304   |   0.0392894  |  29 |
| LEGAL     | IC1     |     0.0548174   |   0.183076   |   3 |
| CUSTOMER  | IC3     |     0.0546722   |   0.040653   |  42 |
| DATA      | M1      |     0.054327    |   0.0438513  |  18 |
| EDU       | IC4     |     0.0543227   |   0.0207491  |  75 |
| MARKETING | IC3     |     0.0541312   |   0.0570124  |  30 |
| PM        | M1      |     0.0541108   |   0.0483069  |  14 |
| FIN       | IC2     |     0.054064    |   0.058585   |  26 |
| LEGAL     | IC5     |     0.0535126   |   0.0227712  |   7 |
| ENG_ELEC  | M1      |     0.0529553   |   0.0480047  |  12 |
| FIN       | IC5     |     0.0523072   |   0.040594   |  28 |
| SWE       | IC2     |     0.0519149   |   0.0222673  |  37 |
| LEGAL     | M1      |     0.0517744   |   0.0683434  |   8 |
| SUPPLY    | IC3     |     0.0513367   |   0.0558915  |  30 |
| PM        | IC4     |     0.0513251   |   0.0356226  |  37 |
| EDU       | M4      |     0.0512312   |   0.0148789  |   4 |
| ENG_MECH  | IC1     |     0.0499491   |   0.255616   |   6 |
| OPS       | M1      |     0.0499286   |   0.0421606  |  27 |
| OPS       | IC5     |     0.0499031   |   0.033256   |  23 |
| ENG_CIVIL | IC4     |     0.049774    |   0.0527157  |  37 |
| SWE       | IC4     |     0.048355    |   0.0171367  |  89 |
| FIN       | IC4     |     0.0480727   |   0.0403866  |  71 |
| DATA      | IC1     |     0.0477894   |   0.215102   |  11 |
| EDU       | IC5     |     0.0475327   |   0.024445   |  30 |
| ENG_ELEC  | IC4     |     0.0470987   |   0.0366519  |  38 |
| PM        | IC2     |     0.0463709   |   0.0455424  |  10 |
| LEGAL     | M2      |     0.046275    |   0.0196615  |   2 |
| PM        | IC1     |     0.0461955   |   0.221818   |   7 |
| FIN       | M1      |     0.046119    |   0.0517355  |  25 |
| SALES     | M1      |     0.0460817   |   0.0785316  |  29 |
| OPS       | M2      |     0.0460175   |   0.033384   |  15 |
| DESIGN    | M2      |     0.0460069   |   0.040994   |  11 |
| OPS       | IC2     |     0.0455601   |   0.0191422  |  24 |
| PM        | IC5     |     0.0455132   |   0.0501634  |  21 |
| ENG_ELEC  | IC5     |     0.0453165   |   0.0273026  |  16 |
| ENG_MECH  | IC2     |     0.0449748   |   0.0365645  |  19 |
| SWE       | M2      |     0.0447717   |   0.0172626  |  23 |
| ENG_ELEC  | IC3     |     0.0447255   |   0.0578414  |  28 |
| MARKETING | IC1     |     0.044676    |   0.481686   |   8 |
| MARKETING | IC4     |     0.0441272   |   0.0647597  |  36 |
| DESIGN    | M3      |     0.0437043   |   0.0553363  |   4 |
| ENG_CIVIL | IC1     |     0.0430962   |   0.417654   |   1 |
| CUSTOMER  | IC4     |     0.042878    |   0.0214288  |  59 |
| HR        | IC4     |     0.0420371   |   0.0691104  |  36 |
| DATA      | IC4     |     0.0419301   |   0.0376623  |  35 |
| DATA      | IC5     |     0.0413884   |   0.0282077  |  12 |
| SUPPLY    | IC1     |     0.0412737   |   0.450469   |   8 |
| DESIGN    | IC6     |     0.0408915   |   0.0365684  |   1 |
| EDU       | IC1     |     0.0405539   |   0.323587   |   9 |
| HEALTH    | M4      |     0.040542    |   0.0212431  |  15 |
| HEALTH    | M2      |     0.040478    |   0.0146697  |  29 |
| LEGAL     | IC2     |     0.0397603   |   0.0685842  |   9 |
| SUPPLY    | IC2     |     0.0397601   |   0.130866   |  14 |
| ENG_CIVIL | IC5     |     0.0395588   |   0.0393391  |  15 |
| ENG_MECH  | IC3     |     0.0384455   |   0.0705916  |  41 |
| SUPPLY    | IC4     |     0.0383478   |   0.076227   |  29 |
| MARKETING | IC5     |     0.0380864   |   0.0298882  |  26 |
| SALES     | M2      |     0.0368326   |   0.043157   |  30 |
| SUPPLY    | D1      |     0.0364751   |   0.0292471  |   5 |
| OPS       | IC6     |     0.0361749   |   0.0375658  |  13 |
| PM        | M2      |     0.0355257   |   0.0429669  |  12 |
| HR        | IC3     |     0.0341198   |   0.0611609  |  27 |
| LEGAL     | M4      |     0.0338109   |   0.0329723  |   1 |
| MARKETING | M1      |     0.0337775   |   0.061421   |  10 |
| FIN       | M2      |     0.0335929   |   0.0361866  |  17 |
| CUSTOMER  | IC2     |     0.0334085   |   0.0783959  |  33 |
| EDU       | M2      |     0.0328816   |   0.0195903  |  25 |
| DATA      | M2      |     0.0325221   |   0.0103906  |  12 |
| EDU       | D2      |     0.0323913   |   0.0149849  |   4 |
| DATA      | IC2     |     0.0323231   |   0.0359084  |  15 |
| OPS       | M4      |     0.0318297   |   0.08028    |   5 |
| HR        | M1      |     0.0316456   |   0.0944586  |  16 |
| ENG_CIVIL | M1      |     0.0315799   |   0.0707302  |  11 |
| EDU       | IC6     |     0.0309876   |   0.00969024 |  13 |
| ENG_MECH  | IC4     |     0.0305473   |   0.0352567  |  52 |
| SALES     | D1      |     0.0305338   |   0.0334171  |   3 |
| CUSTOMER  | IC1     |     0.0303684   |   0.454353   |  17 |
| SUPPLY    | IC5     |     0.0301234   |   0.0609692  |  23 |
| ENG_CIVIL | M4      |     0.0299931   |   0.0628681  |   7 |
| HEALTH    | IC6     |     0.0291876   |   0.0122108  |  16 |
| SUPPLY    | M1      |     0.0289624   |   0.0897592  |  10 |
| ENG_MECH  | M1      |     0.0287461   |   0.0648392  |  15 |
| ENG_CIVIL | IC2     |     0.0286401   |   0.0656572  |  11 |
| HR        | M4      |     0.0285214   |   0.0905175  |   3 |
| ENG_CIVIL | D2      |     0.0283769   |   0.0265845  |   1 |
| HEALTH    | D1      |     0.0281282   |   0.0116776  |   7 |
| SALES     | M4      |     0.0280888   |   0.0768409  |  12 |
| ENG_CIVIL | M5      |     0.0277262   |   0.0031012  |   1 |
| MARKETING | IC6     |     0.0276526   |   0.0383083  |   5 |
| OPS       | M3      |     0.0273767   |   0.0404085  |  13 |
| ENG_ELEC  | IC2     |     0.0272817   |   0.059899   |  16 |
| HR        | IC2     |     0.0271946   |   0.0920613  |  17 |
| ENG_ELEC  | M2      |     0.0268273   |   0.0455132  |  13 |
| EDU       | D1      |     0.0267889   |   0.0265611  |   7 |
| SALES     | M3      |     0.0265902   |   0.0640283  |  26 |
| DESIGN    | D1      |     0.0265802   |   0.00181718 |   1 |
| DESIGN    | M4      |     0.0259377   |   0.079859   |   3 |
| ENG_MECH  | IC5     |     0.0258757   |   0.027703   |  20 |
| SALES     | IC6     |     0.0258361   |   0.0288261  |  16 |
| CUSTOMER  | M4      |     0.0257286   |   0.0298699  |   9 |
| HR        | IC5     |     0.0255771   |   0.0477971  |  20 |
| CUSTOMER  | IC5     |     0.0254796   |   0.0217366  |  25 |
| EDU       | M3      |     0.0249309   |   0.0240571  |  19 |
| FIN       | M4      |     0.0249178   |   0.0648344  |   6 |
| SWE       | M4      |     0.0248524   |   0.0321455  |  13 |
| ENG_MECH  | M2      |     0.0233349   |   0.0182098  |  13 |
| SWE       | IC6     |     0.0231741   |   0.030181   |  17 |
| ENG_ELEC  | IC6     |     0.0229878   |   0.0355547  |   9 |
| ENG_CIVIL | M2      |     0.0227027   |   0.0402495  |   9 |
| DESIGN    | M5      |     0.0224591   |   0.0231939  |   1 |
| SWE       | M3      |     0.0222052   |   0.0370941  |  25 |
| DATA      | IC6     |     0.0212953   |   0.0324341  |  10 |
| DESIGN    | D2      |     0.0210972   |   0.0163707  |   2 |
| DATA      | M3      |     0.0210602   |   0.0441725  |  10 |
| CUSTOMER  | M1      |     0.0206404   |   0.0393795  |  15 |
| ENG_CIVIL | M3      |     0.0205958   |   0.0472453  |  14 |
| SUPPLY    | M4      |     0.0205642   |   0.0494524  |   5 |
| ENG_MECH  | M4      |     0.0204594   |   0.0332287  |   2 |
| SUPPLY    | D2      |     0.0200079   |   0.0141633  |   3 |
| ENG_ELEC  | D2      |     0.0197902   |   0.00335912 |   1 |
| FIN       | D1      |     0.0197021   |   0.0370562  |  11 |
| ENG_ELEC  | D1      |     0.0196278   |   0.0505337  |   3 |
| MARKETING | IC2     |     0.0194401   |   0.0399348  |  14 |
| MARKETING | D1      |     0.0191964   |   0.0383224  |   5 |
| EDU       | M5      |     0.0188173   |   0.0254158  |   1 |
| PM        | IC6     |     0.0181027   |   0.041911   |  10 |
| SALES     | D2      |     0.0180648   |   0.00647087 |   2 |
| SWE       | D1      |     0.0180488   |   0.0124314  |  11 |
| HEALTH    | M3      |     0.0179119   |   0.012409   |  11 |
| ENG_CIVIL | D1      |     0.0176871   |   0.0157563  |   8 |
| CUSTOMER  | M2      |     0.0175734   |   0.0226868  |  14 |
| PM        | D1      |     0.0174952   |   0.00520684 |   1 |
| SALES     | M5      |     0.017306    |   0.0442024  |   4 |
| LEGAL     | IC6     |     0.0168889   |   0.0519288  |   3 |
| PM        | M3      |     0.0167697   |   0.049449   |  10 |
| OPS       | D1      |     0.0167646   |   0.0203413  |   6 |
| ENG_CIVIL | IC6     |     0.0167234   |   0.0548978  |  12 |
| LEGAL     | D1      |     0.0165951   |   0.00813444 |   2 |
| FIN       | IC6     |     0.0165136   |   0.0331562  |   9 |
| PM        | M4      |     0.0165083   |   0.042138   |  10 |
| SUPPLY    | M2      |     0.0159981   |   0.0612809  |   7 |
| SUPPLY    | IC6     |     0.0155525   |   0.0507334  |   7 |
| FIN       | D2      |     0.0152534   |   0.0119763  |   3 |
| HEALTH    | D2      |     0.015213    |   0.00782391 |   5 |
| MARKETING | M2      |     0.0148586   |   0.0546893  |   7 |
| DATA      | M5      |     0.0145655   |   0.0457187  |   1 |
| HR        | M3      |     0.0144498   |   0.125134   |   5 |
| CUSTOMER  | IC6     |     0.0141102   |   0.0104871  |  13 |
| ENG_MECH  | IC6     |     0.0139197   |   0.033354   |  10 |
| DATA      | M4      |     0.013831    |   0.0486588  |   4 |
| HR        | IC1     |     0.0137805   |   0.312361   |   8 |
| SALES     | SVP     |     0.013343    |   0.0252192  |   1 |
| MARKETING | M4      |     0.0127467   |   0.0907005  |   7 |
| ENG_ELEC  | M4      |     0.0124034   |   0.0506492  |   2 |
| FIN       | M3      |     0.0122786   |   0.0488458  |  15 |
| ENG_MECH  | D1      |     0.0118954   |   0.0161521  |   3 |
| ENG_ELEC  | D3      |     0.0118875   |   0.0175119  |   1 |
| EDU       | VP      |     0.0117283   |   0.0110651  |   6 |
| LEGAL     | D2      |     0.0117179   |   0.0319026  |   1 |
| CUSTOMER  | D2      |     0.0112964   |   0.0567438  |   4 |
| ENG_ELEC  | M3      |     0.0111935   |   0.0365566  |   7 |
| SALES     | VP      |     0.010981    |   0.0245407  |   4 |
| SUPPLY    | M3      |     0.010947    |   0.040923   |   4 |
| ENG_ELEC  | M5      |     0.0109221   |   0.0401703  |   5 |
| OPS       | D2      |     0.0107544   |   0.0120166  |   3 |
| ENG_CIVIL | VP      |     0.0105242   |   0.0119563  |   2 |
| FIN       | CXO     |     0.0104695   |   0.0150171  |   1 |
| SUPPLY    | VP      |     0.0100158   |   0.0523892  |   1 |
| LEGAL     | SVP     |     0.00995191  |   0.0176917  |   1 |
| ENG_CIVIL | D3      |     0.00991336  |   0.0148543  |   1 |
| SWE       | M5      |     0.00977992  |   0.0443521  |   6 |
| PM        | D2      |     0.00961567  |   0.0167283  |   4 |
| ENG_MECH  | D3      |     0.0092329   |   0.0161591  |   1 |
| ENG_ELEC  | VP      |     0.00920128  |   0.0374727  |   1 |
| SWE       | VP      |     0.00913164  |   0.00640533 |   1 |
| ENG_MECH  | D2      |     0.00909318  |   0.0105555  |   2 |
| ENG_MECH  | M3      |     0.00906266  |   0.0499526  |  15 |
| MARKETING | D2      |     0.00900739  |   0.0217574  |   4 |
| SWE       | D2      |     0.00877929  |   0.015744   |   2 |
| HR        | M2      |     0.008587    |   0.0493286  |  10 |
| CUSTOMER  | D1      |     0.00837791  |   0.0100158  |   6 |
| FIN       | D3      |     0.00819367  |   0.0223818  |   2 |
| HEALTH    | M5      |     0.00810739  |   0.0376184  |   5 |
| FIN       | VP      |     0.00802766  |   0.0376516  |   3 |
| OPS       | CXO     |     0.00797017  |   0.0188381  |   1 |
| OPS       | M5      |     0.0078722   |   0.0484651  |   2 |
| DATA      | D2      |     0.00740893  |   0.0146947  |   2 |
| MARKETING | M3      |     0.00731847  |   0.0726294  |  15 |
| MARKETING | D3      |     0.00731291  |   0.0485126  |   5 |
| EDU       | SVP     |     0.00716157  |   0.00336645 |   1 |
| OPS       | VP      |     0.00712105  |   0.0103297  |   3 |
| LEGAL     | M3      |     0.00696387  |   0.106172   |   2 |
| ENG_MECH  | VP      |     0.00680252  |   0.0151177  |   2 |
| CUSTOMER  | M3      |     0.00675295  |   0.0304082  |  11 |
| DATA      | D1      |     0.00657899  |   0.010796   |   2 |
| LEGAL     | VP      |     0.00656176  |   0.0328087  |   1 |
| HEALTH    | VP      |     0.00653408  |   0.0157178  |   5 |
| HEALTH    | SVP     |     0.00584126  |   0.0090777  |   3 |
| DESIGN    | VP      |     0.00575269  |   0.0350378  |   1 |
| PM        | M5      |     0.00568218  |   0.048397   |   1 |
| MARKETING | VP      |     0.00565096  |   0.0344526  |   2 |
| DATA      | D3      |     0.00500773  |   0.0217056  |   2 |
| ENG_ELEC  | SVP     |     0.00497188  |   0.0274515  |   1 |
| HR        | D2      |     0.00480584  |   0.0241346  |   2 |
| ENG_MECH  | CXO     |     0.00454426  |   0.0142729  |   1 |
| HR        | IC6     |     0.00442355  |   0.0544481  |   5 |
| ENG_CIVIL | CXO     |     0.00432489  |   0.0490091  |   2 |
| PM        | VP      |     0.0040942   |   0.0155006  |   4 |
| PM        | SVP     |     0.00353008  |   0.035291   |   1 |
| OPS       | SVP     |     0.00351711  |   0.0305619  |   2 |
| HEALTH    | CXO     |     0.00209011  |   0.0167699  |   1 |
| HR        | VP      |     0.00166451  |   0.0221786  |   4 |
| DATA      | VP      |     0.00136333  |   0.0282079  |   1 |
| SWE       | D3      |     0.000798418 |   0.0325733  |   1 |
| CUSTOMER  | M5      |     0.000357929 |   0.0217991  |   1 |
| HR        | D3      |     6.63787e-05 |   0.0316775  |   1 |

## Recommendation head (blinded + reweighted)

- gender median |gap|: 0.00%
- gender p90 |gap|: 0.00%
- nationality median |gap|: 0.00%
- nationality p90 |gap|: 0.00%

| family    | level   |   median_gender |   median_nat |   n |
|:----------|:--------|----------------:|-------------:|----:|
| CUSTOMER  | D1      |               0 |            0 |   6 |
| CUSTOMER  | D2      |               0 |            0 |   4 |
| CUSTOMER  | IC1     |               0 |            0 |  17 |
| CUSTOMER  | IC2     |               0 |            0 |  33 |
| CUSTOMER  | IC3     |               0 |            0 |  42 |
| CUSTOMER  | IC4     |               0 |            0 |  59 |
| CUSTOMER  | IC5     |               0 |            0 |  25 |
| CUSTOMER  | IC6     |               0 |            0 |  13 |
| CUSTOMER  | M1      |               0 |            0 |  15 |
| CUSTOMER  | M2      |               0 |            0 |  14 |
| CUSTOMER  | M3      |               0 |            0 |  11 |
| CUSTOMER  | M4      |               0 |            0 |   9 |
| CUSTOMER  | M5      |               0 |            0 |   1 |
| DATA      | D1      |               0 |            0 |   2 |
| DATA      | D2      |               0 |            0 |   2 |
| DATA      | D3      |               0 |            0 |   2 |
| DATA      | IC1     |               0 |            0 |  11 |
| DATA      | IC2     |               0 |            0 |  15 |
| DATA      | IC3     |               0 |            0 |  41 |
| DATA      | IC4     |               0 |            0 |  35 |
| DATA      | IC5     |               0 |            0 |  12 |
| DATA      | IC6     |               0 |            0 |  10 |
| DATA      | M1      |               0 |            0 |  18 |
| DATA      | M2      |               0 |            0 |  12 |
| DATA      | M3      |               0 |            0 |  10 |
| DATA      | M4      |               0 |            0 |   4 |
| DATA      | M5      |               0 |            0 |   1 |
| DATA      | VP      |               0 |            0 |   1 |
| DESIGN    | D1      |               0 |            0 |   1 |
| DESIGN    | D2      |               0 |            0 |   2 |
| DESIGN    | IC1     |               0 |            0 |   7 |
| DESIGN    | IC2     |               0 |            0 |  14 |
| DESIGN    | IC3     |               0 |            0 |  23 |
| DESIGN    | IC4     |               0 |            0 |  20 |
| DESIGN    | IC5     |               0 |            0 |  15 |
| DESIGN    | IC6     |               0 |            0 |   1 |
| DESIGN    | M1      |               0 |            0 |   4 |
| DESIGN    | M2      |               0 |            0 |  11 |
| DESIGN    | M3      |               0 |            0 |   4 |
| DESIGN    | M4      |               0 |            0 |   3 |
| DESIGN    | M5      |               0 |            0 |   1 |
| DESIGN    | VP      |               0 |            0 |   1 |
| EDU       | D1      |               0 |            0 |   7 |
| EDU       | D2      |               0 |            0 |   4 |
| EDU       | IC1     |               0 |            0 |   9 |
| EDU       | IC2     |               0 |            0 |  31 |
| EDU       | IC3     |               0 |            0 |  51 |
| EDU       | IC4     |               0 |            0 |  75 |
| EDU       | IC5     |               0 |            0 |  30 |
| EDU       | IC6     |               0 |            0 |  13 |
| EDU       | M1      |               0 |            0 |  29 |
| EDU       | M2      |               0 |            0 |  25 |
| EDU       | M3      |               0 |            0 |  19 |
| EDU       | M4      |               0 |            0 |   4 |
| EDU       | M5      |               0 |            0 |   1 |
| EDU       | SVP     |               0 |            0 |   1 |
| EDU       | VP      |               0 |            0 |   6 |
| ENG_CIVIL | CXO     |               0 |            0 |   2 |
| ENG_CIVIL | D1      |               0 |            0 |   8 |
| ENG_CIVIL | D2      |               0 |            0 |   1 |
| ENG_CIVIL | D3      |               0 |            0 |   1 |
| ENG_CIVIL | IC1     |               0 |            0 |   1 |
| ENG_CIVIL | IC2     |               0 |            0 |  11 |
| ENG_CIVIL | IC3     |               0 |            0 |  41 |
| ENG_CIVIL | IC4     |               0 |            0 |  37 |
| ENG_CIVIL | IC5     |               0 |            0 |  15 |
| ENG_CIVIL | IC6     |               0 |            0 |  12 |
| ENG_CIVIL | M1      |               0 |            0 |  11 |
| ENG_CIVIL | M2      |               0 |            0 |   9 |
| ENG_CIVIL | M3      |               0 |            0 |  14 |
| ENG_CIVIL | M4      |               0 |            0 |   7 |
| ENG_CIVIL | M5      |               0 |            0 |   1 |
| ENG_CIVIL | VP      |               0 |            0 |   2 |
| ENG_ELEC  | D1      |               0 |            0 |   3 |
| ENG_ELEC  | D2      |               0 |            0 |   1 |
| ENG_ELEC  | D3      |               0 |            0 |   1 |
| ENG_ELEC  | IC1     |               0 |            0 |   8 |
| ENG_ELEC  | IC2     |               0 |            0 |  16 |
| ENG_ELEC  | IC3     |               0 |            0 |  28 |
| ENG_ELEC  | IC4     |               0 |            0 |  38 |
| ENG_ELEC  | IC5     |               0 |            0 |  16 |
| ENG_ELEC  | IC6     |               0 |            0 |   9 |
| ENG_ELEC  | M1      |               0 |            0 |  12 |
| ENG_ELEC  | M2      |               0 |            0 |  13 |
| ENG_ELEC  | M3      |               0 |            0 |   7 |
| ENG_ELEC  | M4      |               0 |            0 |   2 |
| ENG_ELEC  | M5      |               0 |            0 |   5 |
| ENG_ELEC  | SVP     |               0 |            0 |   1 |
| ENG_ELEC  | VP      |               0 |            0 |   1 |
| ENG_MECH  | CXO     |               0 |            0 |   1 |
| ENG_MECH  | D1      |               0 |            0 |   3 |
| ENG_MECH  | D2      |               0 |            0 |   2 |
| ENG_MECH  | D3      |               0 |            0 |   1 |
| ENG_MECH  | IC1     |               0 |            0 |   6 |
| ENG_MECH  | IC2     |               0 |            0 |  19 |
| ENG_MECH  | IC3     |               0 |            0 |  41 |
| ENG_MECH  | IC4     |               0 |            0 |  52 |
| ENG_MECH  | IC5     |               0 |            0 |  20 |
| ENG_MECH  | IC6     |               0 |            0 |  10 |
| ENG_MECH  | M1      |               0 |            0 |  15 |
| ENG_MECH  | M2      |               0 |            0 |  13 |
| ENG_MECH  | M3      |               0 |            0 |  15 |
| ENG_MECH  | M4      |               0 |            0 |   2 |
| ENG_MECH  | VP      |               0 |            0 |   2 |
| FIN       | CXO     |               0 |            0 |   1 |
| FIN       | D1      |               0 |            0 |  11 |
| FIN       | D2      |               0 |            0 |   3 |
| FIN       | D3      |               0 |            0 |   2 |
| FIN       | IC1     |               0 |            0 |   5 |
| FIN       | IC2     |               0 |            0 |  26 |
| FIN       | IC3     |               0 |            0 |  47 |
| FIN       | IC4     |               0 |            0 |  71 |
| FIN       | IC5     |               0 |            0 |  28 |
| FIN       | IC6     |               0 |            0 |   9 |
| FIN       | M1      |               0 |            0 |  25 |
| FIN       | M2      |               0 |            0 |  17 |
| FIN       | M3      |               0 |            0 |  15 |
| FIN       | M4      |               0 |            0 |   6 |
| FIN       | VP      |               0 |            0 |   3 |
| HEALTH    | CXO     |               0 |            0 |   1 |
| HEALTH    | D1      |               0 |            0 |   7 |
| HEALTH    | D2      |               0 |            0 |   5 |
| HEALTH    | IC1     |               0 |            0 |  16 |
| HEALTH    | IC2     |               0 |            0 |  32 |
| HEALTH    | IC3     |               0 |            0 |  81 |
| HEALTH    | IC4     |               0 |            0 |  92 |
| HEALTH    | IC5     |               0 |            0 |  38 |
| HEALTH    | IC6     |               0 |            0 |  16 |
| HEALTH    | M1      |               0 |            0 |  24 |
| HEALTH    | M2      |               0 |            0 |  29 |
| HEALTH    | M3      |               0 |            0 |  11 |
| HEALTH    | M4      |               0 |            0 |  15 |
| HEALTH    | M5      |               0 |            0 |   5 |
| HEALTH    | SVP     |               0 |            0 |   3 |
| HEALTH    | VP      |               0 |            0 |   5 |
| HR        | D2      |               0 |            0 |   2 |
| HR        | D3      |               0 |            0 |   1 |
| HR        | IC1     |               0 |            0 |   8 |
| HR        | IC2     |               0 |            0 |  17 |
| HR        | IC3     |               0 |            0 |  27 |
| HR        | IC4     |               0 |            0 |  36 |
| HR        | IC5     |               0 |            0 |  20 |
| HR        | IC6     |               0 |            0 |   5 |
| HR        | M1      |               0 |            0 |  16 |
| HR        | M2      |               0 |            0 |  10 |
| HR        | M3      |               0 |            0 |   5 |
| HR        | M4      |               0 |            0 |   3 |
| HR        | VP      |               0 |            0 |   4 |
| LEGAL     | D1      |               0 |            0 |   2 |
| LEGAL     | D2      |               0 |            0 |   1 |
| LEGAL     | IC1     |               0 |            0 |   3 |
| LEGAL     | IC2     |               0 |            0 |   9 |
| LEGAL     | IC3     |               0 |            0 |  12 |
| LEGAL     | IC4     |               0 |            0 |  19 |
| LEGAL     | IC5     |               0 |            0 |   7 |
| LEGAL     | IC6     |               0 |            0 |   3 |
| LEGAL     | M1      |               0 |            0 |   8 |
| LEGAL     | M2      |               0 |            0 |   2 |
| LEGAL     | M3      |               0 |            0 |   2 |
| LEGAL     | M4      |               0 |            0 |   1 |
| LEGAL     | SVP     |               0 |            0 |   1 |
| LEGAL     | VP      |               0 |            0 |   1 |
| MARKETING | D1      |               0 |            0 |   5 |
| MARKETING | D2      |               0 |            0 |   4 |
| MARKETING | D3      |               0 |            0 |   5 |
| MARKETING | IC1     |               0 |            0 |   8 |
| MARKETING | IC2     |               0 |            0 |  14 |
| MARKETING | IC3     |               0 |            0 |  30 |
| MARKETING | IC4     |               0 |            0 |  36 |
| MARKETING | IC5     |               0 |            0 |  26 |
| MARKETING | IC6     |               0 |            0 |   5 |
| MARKETING | M1      |               0 |            0 |  10 |
| MARKETING | M2      |               0 |            0 |   7 |
| MARKETING | M3      |               0 |            0 |  15 |
| MARKETING | M4      |               0 |            0 |   7 |
| MARKETING | VP      |               0 |            0 |   2 |
| OPS       | CXO     |               0 |            0 |   1 |
| OPS       | D1      |               0 |            0 |   6 |
| OPS       | D2      |               0 |            0 |   3 |
| OPS       | IC1     |               0 |            0 |  17 |
| OPS       | IC2     |               0 |            0 |  24 |
| OPS       | IC3     |               0 |            0 |  59 |
| OPS       | IC4     |               0 |            0 |  46 |
| OPS       | IC5     |               0 |            0 |  23 |
| OPS       | IC6     |               0 |            0 |  13 |
| OPS       | M1      |               0 |            0 |  27 |
| OPS       | M2      |               0 |            0 |  15 |
| OPS       | M3      |               0 |            0 |  13 |
| OPS       | M4      |               0 |            0 |   5 |
| OPS       | M5      |               0 |            0 |   2 |
| OPS       | SVP     |               0 |            0 |   2 |
| OPS       | VP      |               0 |            0 |   3 |
| PM        | D1      |               0 |            0 |   1 |
| PM        | D2      |               0 |            0 |   4 |
| PM        | IC1     |               0 |            0 |   7 |
| PM        | IC2     |               0 |            0 |  10 |
| PM        | IC3     |               0 |            0 |  33 |
| PM        | IC4     |               0 |            0 |  37 |
| PM        | IC5     |               0 |            0 |  21 |
| PM        | IC6     |               0 |            0 |  10 |
| PM        | M1      |               0 |            0 |  14 |
| PM        | M2      |               0 |            0 |  12 |
| PM        | M3      |               0 |            0 |  10 |
| PM        | M4      |               0 |            0 |  10 |
| PM        | M5      |               0 |            0 |   1 |
| PM        | SVP     |               0 |            0 |   1 |
| PM        | VP      |               0 |            0 |   4 |
| SALES     | D1      |               0 |            0 |   3 |
| SALES     | D2      |               0 |            0 |   2 |
| SALES     | IC1     |               0 |            0 |  15 |
| SALES     | IC2     |               0 |            0 |  23 |
| SALES     | IC3     |               0 |            0 |  55 |
| SALES     | IC4     |               0 |            0 |  95 |
| SALES     | IC5     |               0 |            0 |  52 |
| SALES     | IC6     |               0 |            0 |  16 |
| SALES     | M1      |               0 |            0 |  29 |
| SALES     | M2      |               0 |            0 |  30 |
| SALES     | M3      |               0 |            0 |  26 |
| SALES     | M4      |               0 |            0 |  12 |
| SALES     | M5      |               0 |            0 |   4 |
| SALES     | SVP     |               0 |            0 |   1 |
| SALES     | VP      |               0 |            0 |   4 |
| SUPPLY    | D1      |               0 |            0 |   5 |
| SUPPLY    | D2      |               0 |            0 |   3 |
| SUPPLY    | IC1     |               0 |            0 |   8 |
| SUPPLY    | IC2     |               0 |            0 |  14 |
| SUPPLY    | IC3     |               0 |            0 |  30 |
| SUPPLY    | IC4     |               0 |            0 |  29 |
| SUPPLY    | IC5     |               0 |            0 |  23 |
| SUPPLY    | IC6     |               0 |            0 |   7 |
| SUPPLY    | M1      |               0 |            0 |  10 |
| SUPPLY    | M2      |               0 |            0 |   7 |
| SUPPLY    | M3      |               0 |            0 |   4 |
| SUPPLY    | M4      |               0 |            0 |   5 |
| SUPPLY    | VP      |               0 |            0 |   1 |
| SWE       | D1      |               0 |            0 |  11 |
| SWE       | D2      |               0 |            0 |   2 |
| SWE       | D3      |               0 |            0 |   1 |
| SWE       | IC1     |               0 |            0 |  14 |
| SWE       | IC2     |               0 |            0 |  37 |
| SWE       | IC3     |               0 |            0 |  70 |
| SWE       | IC4     |               0 |            0 |  89 |
| SWE       | IC5     |               0 |            0 |  44 |
| SWE       | IC6     |               0 |            0 |  17 |
| SWE       | M1      |               0 |            0 |  29 |
| SWE       | M2      |               0 |            0 |  23 |
| SWE       | M3      |               0 |            0 |  25 |
| SWE       | M4      |               0 |            0 |  13 |
| SWE       | M5      |               0 |            0 |   6 |
| SWE       | VP      |               0 |            0 |   1 |

## Truth-check vs live GASTAT data (KAPSARC)

Reference year: **2020**

- Published gender gap, all employees: **-1.09%** (vs model |gap| 4.40%)
- Published gender gap, Saudi-only: **-16.44%**
- Published Saudi-vs-all wage premium: **+55.32%** (vs model |nat gap| 4.32%)

Reading: large positive Saudi-vs-all premium reflects expat labor concentrated at the floor; the larger Saudi-only gender gap is the residual real gap once the high-education female cohort is removed.
